// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppHeader Icon Rendering > renders the default icon in standard terminals 1`] = `
"
  ▝▜▄     OpenCC v1.0.0
    ▝▜▄
   ▗▟▀    No API key configured. Use /model to set one.
  ▝▀    


Tips for getting started:
1. Create AGENTS.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results"
`;

exports[`AppHeader Icon Rendering > renders the symmetric icon in Apple Terminal 1`] = `
"
  ▝▜▄    OpenCC v1.0.0
    ▝▜▄
    ▗▟▀  No API key configured. Use /model to set one.
  ▗▟▀  


Tips for getting started:
1. Create AGENTS.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results"
`;
